src/pages/graphics/albums/AlbumsPage.module.scss
/* ... */
// TEES STYLES
.tee-wrap {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;

  .single-tee {
    cursor: pointer;
    width: 80px;
    transition: all 0.2s ease-in-out;

    @media only screen and (min-width: 786px) {
      width: 150px;
    }

    &.rotateNone {
      transform: rotate(0)
    }

    &.rotateLeftLess {
      transform: rotate(-2.5deg)
    }

    &.rotateRightLess {
      transform: rotate(2.5deg)
    }

    &.rotateLeft {
      transform: rotate(-5deg)
    }

    &.rotateRight {
      transform: rotate(5deg)
    }

    &.rotateLeftMore {
      transform: rotate(-7.5deg)
    }

    &.rotateRightMore {
      transform: rotate(7.5deg)
    }

    &:hover {
      transform: scale(1.2) translateY(-30%);
      z-index: 3;
    }

    img {
      margin: 0 -15% -50%;
      max-width: 130%;
    }
  }
}

.single-tee-hires-wrap,
.album-hires-wrap {
  background: var(--background-modal);
  position: fixed;
  top: 50vh;
  bottom: 50vh;
  left: 0vw;
  right: 0vw;
  opacity: 0;
  transition: all 0.5s ease-in-out !important;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  //padding: 30px;

  &.active {
    top: 15vh;
    bottom: 15vh;
    opacity: 1;
    z-index: 100;

    .expand-close {
      top: 10px;
      left: 10px;
      opacity: 1;
      transform: rotate(45deg);

      &:hover {
        transform: rotate(45deg) scale(1.2);
      }
    }
  }

  .hires-img {
    margin: 0 auto;
    max-height: 100%;

    img {
      max-height: 100%;
    }
  }
}

.album-hires-wrap {
  position: absolute;
  top: 50%;
  bottom: 50%;
  right: auto;
  left: calc(((100vw - 100%) / 2) * -1);
  width: 100vw;

  &.active {
    cursor: pointer;
    top: 2%;
    bottom: 54%;
    z-index: 40;

    &.modal-wrap-2,
    &.modal-wrap-3 {
      top: 10%;
      bottom: 46%;
    }

    &.modal-wrap-4,
    &.modal-wrap-5 {
      top: 30%;
      bottom: 26%;
    }

    &.modal-wrap-6,
    &.modal-wrap-7 {
      top: 58%;
      bottom: 10%;
    }

    &.modal-wrap-8,
    &.modal-wrap-9 {
      top: 65%;
      bottom: -2%;
    }

    @include m.breakpoint(sm, min) {
      top: 2%;
      bottom: 18%;

      &.modal-wrap-3,
      &.modal-wrap-4,
      &.modal-wrap-5 {
        top: 7.33%;
        bottom: 12.67%;
      }

      &.modal-wrap-6,
      &.modal-wrap-7,
      &.modal-wrap-8 {
        top: 32%;
        bottom: 7.33%;
      }

      &.modal-wrap-9 {
        top: 37.67%;
        bottom: 2%;
      }
    }

    @include m.breakpoint(md, min) {
      top: 3%;
      bottom: 33%;

      &.modal-wrap-4,
      &.modal-wrap-5,
      &.modal-wrap-6,
      &.modal-wrap-7 {
        top: 18%;
        bottom: 18%;
      }

      &.modal-wrap-8,
      &.modal-wrap-9 {
        top: 33%;
        bottom: 3%;
      }
    }

    @include m.breakpoint(lg, min) {
      top: 4% !important;
      bottom: 4% !important;
    }

    //.expand-close {
    //  top: 10px;
    //  left: 10px;
    //  transform: rotate(45deg);
    //  opacity: 1;
    //  z-index: 55;
    //  cursor: pointer;
    //}
  }
}

